--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,11 @@
   ~ You should have received a copy of the GNU General Public License along with
   ~ this program. If not, see <http://www.gnu.org/licenses />.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.jferard</groupId>
     <artifactId>java-mcsv</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>java-mcsv</name>
     <packaging>jar</packaging>
     <description>A MetaCSV library for Java</description>
@@ -54,7 +52,7 @@
         <connection>scm:git:git@github.com:jferard/java-mcsv.git</connection>
         <developerConnection>scm:git:git@github.com:jferard/java-mcsv.git</developerConnection>
         <url>git@github.com:jferard/java-mcsv.git</url>
-        <tag>java-mcsv-0.0.1-SNAPSHOT</tag>
+        <tag>java-mcsv-0.0.1</tag>
     </scm>
 
     <distributionManagement>
