--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.jferard</groupId>
     <artifactId>java-mcsv</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5-SNAPSHOT</version>
     <name>java-mcsv</name>
     <packaging>jar</packaging>
     <description>A MetaCSV library for Java</description>
@@ -72,7 +72,7 @@
         <connection>scm:git:git@github.com:jferard/java-mcsv.git</connection>
         <developerConnection>scm:git:git@github.com:jferard/java-mcsv.git</developerConnection>
         <url>git@github.com:jferard/java-mcsv.git</url>
-        <tag>java-mcsv-0.0.4</tag>
+        <tag>java-mcsv-0.0.1-SNAPSHOT</tag>
     </scm>
 
     <distributionManagement>
